--- a/SA.MVC/Views/Shared/_Layout.cshtml
+++ b/SA.MVC/Views/Shared/_Layout.cshtml
@@ -19,13 +19,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Moj odabir</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Moj odabir</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Moj rezultat</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="MyResults">Moj rezultat</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Odjava</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Privacy">Odjava</a>
                         </li>
                     </ul>
                 </div>
