--- a/SA.MVC/Views/Shared/_LayoutProfessor.cshtml
+++ b/SA.MVC/Views/Shared/_LayoutProfessor.cshtml
@@ -19,10 +19,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Moji Studenti</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Professors" asp-action="ShowAssignedStudents">Moji Studenti</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Logout</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Professors" asp-action="Privacy">Logout</a>
                         </li>
                     </ul>
                 </div>
