--- a/SA.MVC/Views/Shared/_Layout.cshtml
+++ b/SA.MVC/Views/Shared/_Layout.cshtml
@@ -32,11 +32,9 @@
             </div>
         </nav>
     </header>
-    <div class="container h-75">
-        <main role="main" class="pb-3 h-100">
+        <main role="main" class="mt-4">
             @RenderBody()
         </main>
-    </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
@@ -46,6 +44,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
