--- a/SA.MVC/Views/Professors/Index.cshtml
+++ b/SA.MVC/Views/Professors/Index.cshtml
@@ -1,14 +1,67 @@
-﻿@using SA.Core.Enums;
+﻿@model IEnumerable<SA.Core.Dtos.AssignedStudetnsDto>
 
-@model UserHomeDto
 @{
-    ViewData["Title"] = "Home Page";
-    if (Model.RoleId == (int)DbEnums.Roles.Student)
-    {
-        Layout = "_Layout";
-    }
-    else if (Model.RoleId == (int)DbEnums.Roles.Professor)
-    {
-        Layout = "_LayoutProfessor";
-    }
+    ViewData["Title"] = "ShowAssignedStudents";
+    Layout = "_LayoutProfessor";
 }
+
+<h1>ShowAssignedStudents</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.StudentFirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StudentLastName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CourseId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AverageGrade)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StudyLevel)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Comment)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StudentFirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StudentLastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CourseId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AverageGrade)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StudyLevel)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Comment)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
