--- a/SA.MVC/Views/Home/Login.cshtml
+++ b/SA.MVC/Views/Home/Login.cshtml
@@ -24,7 +24,9 @@
             <p id="profile-name" class="profile-name-card"></p>
             <form class="form-signin" asp-action="Login">
                 <span id="reauth-email" class="reauth-email"></span>
-                <input asp-for="Email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                <input asp-for="Email" type="email" id="inputEmail" class="form-control" placeholder="Email adresa" required autofocus>
+                <span id="reauth-email" class="reauth-email"></span>
+                <input type="password" id="inputPassword" class="form-control" placeholder="Lozinka" required autofocus>
                 <div id="remember" class="checkbox">
                     <label>
                         <input type="checkbox" value="remember-me"> Zapamti me
