--- a/SA.MVC/Views/Home/Login.cshtml
+++ b/SA.MVC/Views/Home/Login.cshtml
@@ -32,7 +32,7 @@
                         <input type="checkbox" value="remember-me"> Zapamti me
                     </label>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
+                <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Prijava</button>
             </form>
             <a href="#" class="forgot-password">
                 Zaboravili ste email?
