--- a/SA.MVC/Views/Shared/_Layout.cshtml
+++ b/SA.MVC/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow mb-3">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/assets/logo.png" width="120" height="60" class="d-inline-block align-top" /></a>
+            <a class="navbar-brand" asp-area="" asp-controller="Students" asp-action="Index"><img src="~/assets/logo.png" width="120" height="60" class="d-inline-block align-top" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,7 +36,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - SA.MVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - Sva prava pridržana -  <a href="https://www.fesb.unist.hr/" target="_blank">FESB</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
