--- a/SA.MVC/Views/Shared/_LayoutAdmin.cshtml
+++ b/SA.MVC/Views/Shared/_LayoutAdmin.cshtml
@@ -9,7 +9,29 @@
 </head>
 <body>
     <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow mb-3">
+            <a class="navbar-brand" asp-area="" asp-controller="Admins" asp-action="Index"><img src="~/assets/logo.png" width="120" height="60" class="d-inline-block align-top" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Admins" asp-action="Index">Moj odabir</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Admins" asp-action="Students">Student-profesor</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Admins" asp-action="Unassigned">Neraspoređeni</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0 border border-dark rounded">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Odjava</a>
+                </form>
+            </div>
+        </nav>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -25,6 +47,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
