--- a/SA.MVC/Views/Admins/Students.cshtml
+++ b/SA.MVC/Views/Admins/Students.cshtml
@@ -14,7 +14,7 @@
 </div>
 
 <div class="btn-group">
-    <button type="button" id="studentButton" class="btn btn-info">Odaberi studij</button>
+    <button type="button" id="studentButton" class="btn btn-info">Odaberi studenta</button>
     <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="sr-only">Toggle Dropdown</span>
     </button>
@@ -61,7 +61,12 @@
                 $("#students").empty();
                 courseDropDown = [];
                 studentsDropDown = [];
+                $("#studentButton").text("Odaberi studenta");
+                $("#courseButton").text("Odaberi studij");
+
+
                 loadCourses();
+
             });
 
         $(".dropdown-menu#courses").click(function (event) {
@@ -78,7 +83,7 @@
                             aElement.textContent = val.firstName + ' ' + val.lastName;
                             aElement.className = "dropdown-item";
                             aElement.href = "#";
-                            aElement.id = val.studentId;
+                            aElement.id = val.id;
                             studentsDropDown.push(aElement);
                         });
                         $("#students").html(studentsDropDown);
@@ -88,6 +93,27 @@
                     }
                   });
         });
+
+            $(".dropdown-menu#students").click(function (event) {
+                var text = event.target.innerText
+                $("#studentButton").text(text);
+                console.log(event.target.id);
+
+                      $.ajax({
+                        url: '@Url.Action("GetAllStudentProfessorDetails", "Admins")',
+                        type: "GET",
+                        data: { userId: event.target.id },
+                            success: function (result) {
+                                console.log(result);
+                            },
+                            error: function () {
+                                alert("Something went wrong call the police");
+                            }
+                          });
+
+            });
+
+
         });
 
     </script>
