--- a/SA.MVC/Views/Shared/_LayoutProfessor.cshtml
+++ b/SA.MVC/Views/Shared/_LayoutProfessor.cshtml
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow mb-3">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/assets/logo.png" width="120" height="60" class="d-inline-block align-top" /></a>
+            <a class="navbar-brand" asp-area="" asp-controller="Professors" asp-action="Index"><img src="~/assets/logo.png" width="120" height="60" class="d-inline-block align-top" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Professors" asp-action="Index">Moj odabir</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Professors" asp-action="Index">Moji studenti</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0 border border-dark rounded">
