--- a/SA.MVC/Views/Students/Index.cshtml
+++ b/SA.MVC/Views/Students/Index.cshtml
@@ -17,7 +17,7 @@
 <div class="container">
     <div class="row justify-content-between">
         <div class="col-md">
-            <div class="card card border-0 shadow card-height" ">
+            <div class="card card border-0 shadow card-height">
                 <div class="card-body overflow-auto">
                     <h5 class="card-title">Ponuđeni mentori</h5>
                     <p class="card-text">Molimo vas odaberi točno <strong>pet</strong> mentora.</p>
