--- a/SA.MVC/Views/Shared/_LayoutAdmin.cshtml
+++ b/SA.MVC/Views/Shared/_LayoutAdmin.cshtml
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Admins" asp-action="Index">Moj odabir</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Admins" asp-action="Index">Pokretanje sustava</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Admins" asp-action="Students">Student-profesor</a>
